style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
body {
    margin: 0;
    padding: 0;
    background-color: #ccc; 
    font-family: 'Poppins', sans-serif;
    
}
.navbar {
    background-color: #ffffff;
    color: #000000;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 64px;
}

.brand {
    display: flex;
    align-items: center; 
}

#COLMAR, #ACADEMY {
    font-size: 32px;
    color: #ccc; 
}

#ACADEMY {
    color: #000000; 
}

.logo {
    width: auto;
    height: 48px; 
    margin-right: 20px; 
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    align-items: center; 
}

li {
    margin-left: 16px;
}

li:first-child {
    margin-left: 0;
}
li:last-child {
    margin-right: 24px; 
}

a {
    text-decoration: none;
    color: #131313;
    padding: 10px;
}

a:hover {
    background-color: #555;
}

/*---endnav-----*/

.hero{

    display: flex;
    justify-content: flex-start;
   
}

.content img{
    width: 60%;
    height: auto;
    margin: 24px 32px 24px 32px;
}

.content {
    display: flex; 
    align-items: center; 
}

.content img {
    width: 60%;
    height: auto;
    margin: 24px 32px 24px 32px;
}

.content.h1 {
    font-size: 24px;
    color: #000;
}

.content.p {
    font-size: 16px;
    color: #333;
}

button {
    padding: 8px 8px;
    background-color: #474444;
    color: #fff;
    border: none;
    border-radius: 0px;
    cursor: pointer;
    font-size: 16px;
}

button:hover {
    background-color: #bdbebf;
}
/*end first section*/

.container {
    display: flex; 
}
#about {
    min-height: 70%;
    width: 70%; 
    display: flex;
    justify-content: flex-start;
    background: #ffffff;
}

#about img {
    display: flex;
    max-width: 85%; 
    max-height: 100%; 
    width: auto; 
    height: auto; 
    margin: 24px 32px 24px 32px; 
}

#third {
    display: flex;
    margin-left: 2px; 
    width: 30%;
    background-color: #ffffff; 


}
#third img {

   display: flex;
    max-width: 40%; 
    max-height: 100%; 
    width: auto; 
    height: auto; 
    margin: 16px 16px 16px 16px;
}
#third {
    display: flex;
    flex-direction: column;
}

.pair {
    display: flex;
    align-items: center;
    margin-bottom: 20px;
}

.pair img {
    max-width: 100px; /* Adjust width as needed */
    height: auto;
    margin-right: 20px; /* Add spacing between image and text */
}

.pair h1 {
    font-size: 16px;
    margin: 0; /* Reset margin to remove default spacing */
}

.ahhhh{
    display: flex;
    flex-direction: column;
    margin-left: 2px; 
    background-color: #dddddd; 

}
.scream{
    display: flex;
    flex-direction: column;
    margin-left: 2px; 
    background-color: #ffffff; 

}

.layout {
        display: flex;
        display: grid;
        grid-template-rows: repeat(3, 1fr);
        grid-template-columns: repeat(3, 1fr);
        gap: 8px;
        grid-auto-flow: row dense;
    
  }
    .layout img {
        width: 100%;
        height: auto;
    }


.thesis-container > h1 {
    color: darkgray;
    text-align: center;
    padding: 5%;
}

.thesis-grid {
    display: grid;
    grid-template-columns: 3fr 2fr;
}


.urban-container {
    display: flex;
    flex-direction: column;
    padding: 0 3%;
}

.urban-video > video {
    width: 100%;
}

.urban-info {
    padding: 1% 0 5% 0;
}

.urban-info > * {
    padding: 1% 0;
}

.urban-info > p {
    font-size: small;
    color: darkgray;
}

.other-thesis-container {
    display: flex;
    flex-direction: column;
}

.other-thesis-container img {
    width: 10rem;
}

.other-thesis-container p{
    font-size: small;
    color: darkgray;
}

.fisma, .now-and-then {
    display: flex;
    padding: 5%;
}

.fisma {
    background-color: white;
}

.fisma-info, .nt-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.fisma-info > *, .nt-info>* {
    padding: 1%;
    margin: 5% 8%;
}

